2010-03-18  Adam Langley  <agl@chromium.org>

Reviewed by David Levin.

        [chromium] Fix inverted logic in per-strike renderer patch.

        I screwed up in r55089 and got one of the conditions backwards. Thanks
        to Roman Tsisyk for pointing it out.

        https://bugs.webkit.org/show_bug.cgi?id=35495

        * platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle.html: Added.
2010-03-18  Adam Langley  <agl@chromium.org>

        Reviewed by David Levin.

        [chromium] Fix inverted logic in per-strike renderer patch.

        I screwed up in r55089 and got one of the conditions backwards. Thanks
        to Roman Tsisyk for pointing it out.

        https://bugs.webkit.org/show_bug.cgi?id=35495

        Test: platform/chromium/fast/text/chromium-linux-fontconfig-renderstyle.html

        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::querySystemForRenderStyle):

Canonical link: https://commits.webkit.org/47456@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56162 268f45cc-cd09-0410-ab3c-d52691b4dbfc